--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "kubota": {
+    "angular-concepts": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "kubota:build"
+            "browserTarget": "angular-concepts:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "kubota:build:production"
+              "browserTarget": "angular-concepts:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "kubota:build"
+            "browserTarget": "angular-concepts:build"
           }
         },
         "test": {
@@ -110,11 +110,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "kubota:serve"
+            "devServerTarget": "angular-concepts:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "kubota:serve:production"
+              "devServerTarget": "angular-concepts:serve:production"
             }
           }
         },
@@ -143,5 +143,5 @@
         }
       }
     }},
-  "defaultProject": "kubota"
+  "defaultProject": "angular-concepts"
 }
