--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -6,5 +6,11 @@
   },
   "angularCompilerOptions": {
     "entryModule": "./src/app/app.server.module#AppServerModule"
-  }
+  },
+  "files": [
+    "server.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
+  ]
 }
